{{$NEXT}}

0.89     2017-12-24

- The generated perlcriticrc now does a better job of selecting themes.


0.88     2017-11-21

- Removed the MinimumPerl plugin. It scans all sorts of non-perl files (like
  html) and comes up with bogus minimum versions because of that.


0.87     2017-11-18

- Add a has_xs configuration option. Normally this is determined by looking
  for XS files in the distro, but I have a new distro where I need to set this
  explicitly.


0.86     2017-11-12

- Added the MinimumPerl plugin.


0.85     2017-03-14

- Add Code::TidyAll::Plugin::SortLines::Naturally to develop prereqs for
  modules which use this bundle.


0.84     2017-03-14

- Use SortLines::Naturally tidyall plugin to sort lists of stopwords instead
  of SortLines.


0.83     2017-03-05

- Made tidyall.ini generation smarter and more configurable.

- Fix a formatting issue with the generated tidyall.ini when there were no
  global ignores.


0.82     2017-02-28

- Don't assume that our dzil and podweaver plugin bundles have the same
  prefix.


0.81     2017-02-01

- Require Code::TidyAll 0.56 so we can use the global ignore feature in the
  geneated tidyall.ini file.


0.80     2017-01-08

- Fix test failures related to how POD is generated when running in Travis.


0.79     2017-01-08

- Replaced DROLSKY::CheckChangesHasContent plugin with
  EnsureChangesHasContent.

- Replaced DROLSKY::VersionProvider with VersionFromMainModule.

- Improved some POD generation code and the POD which is generated.


0.78     2016-11-29

- Handle a ppport.h file being generated in a subdirectory as well as in the
  root of the distro.


0.77     2016-11-12

- Generated POD said my IRC nick was "drolsky" instead of "autarch". Reported
  by mst.


0.76     2016-11-01

- Only tell CopyFileFromBuild to copy files that which actually exist in the
  distro. The latest version of that plugin now dies on missing files.


0.75     2016-10-11

- Added pod_coverage_also_private to pass more stuff to