@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Added some hackish plugins to make tests run in parallel by default,
+  including during the release phase.
+
+
 0.89     2017-12-24
 
 - The generated perlcriticrc now does a better job of selecting themes.
